# banking-exercise

./: Cargo.toml  README.md  generate.py
samples/: test2.csv
src/: lib.rs  main.rs  options.rs  processor.rs
src/models/: account.rs  transaction.rs
