[package]
name = "banking-exercise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5"
csv = "1"
derive_more = "0.99"
num_cpus = "1"
rayon = "1"
rust_decimal = { version = "1" }
serde = { version = "1", features = ["derive"] }
snafu = "0.7"
structopt = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
